crates/core/tests/rust/snapshots/integration_tests__rust__method_call_dependency_metrics.snap
---
source: crates/core/tests/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/method_call_dependency.rs",
  "line_metrics": [
    {
      "line_number": 5,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.2857142857142857,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 7,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.35714285714285715,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 12,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.7857142857142857,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 13,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.07142857142857142,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        12
      ]
    }
  ],
  "overall_complexity_score": 10.15
}
