crates/core/tests/rust/snapshots/integration_tests__rust__use_macro_dependency_ir.snap
---
source: crates/core/tests/rust/mod.rs
expression: ir_snapshot_content
---
Source Code:
fn main() {
    use my_module::some_macro;
    some_macro!("use macro");
}


AST:
(source_file
  (function_item
    name: (identifier "main")
    parameters: (parameters)
    body: (block
      (use_declaration
        argument: (scoped_identifier "my_module::some_macro"
          path: (identifier "my_module")
          name: (identifier "some_macro")
        )
      )
      (expression_statement
        (macro_invocation
          macro: (identifier "some_macro")
          (token_tree
            (string_literal ""use macro""
              (string_content)
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/rust/fixtures/use_macro_dependency.rs",
    definitions: [
        Definition {
            name: "main",
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 8,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "some_macro",
            position: Position {
                start_line: 2,
                start_column: 20,
                end_line: 2,
                end_column: 30,
            },
            definition_type: ImportDefinition,
        },
    ],
    dependencies: [
        Dependency {
            source_line: 3,
            target_line: 2,
            symbol: "some_macro",
            dependency_type: VariableUse,
            context: Some(
                "Identifier:3:5",
            ),
        },
    ],
    usage: [
        Usage {
            name: "my_module",
            kind: Identifier,
            position: Position {
                start_line: 2,
                start_column: 9,
                end_line: 2,
                end_column: 18,
            },
        },
        Usage {
            name: "some_macro",
            kind: Identifier,
            position: Position {
                start_line: 2,
                start_column: 20,
                end_line: 2,
                end_column: 30,
            },
        },
        Usage {
            name: "some_macro",
            kind: Identifier,
            position: Position {
                start_line: 3,
                start_column: 5,
                end_line: 3,
                end_column: 15,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 4,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
