crates/core/tests/rust/snapshots/integration_tests__rust__use_statements_dependency_metrics.snap
---
source: crates/core/tests/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/use_statements_dependency.rs",
  "line_metrics": [
    {
      "line_number": 7,
      "total_dependencies": 3,
      "dependency_distance_cost": 1.0,
      "depth": 1,
      "transitive_dependencies": 3,
      "dependent_lines": [
        2,
        13,
        1
      ]
    },
    {
      "line_number": 8,
      "total_dependencies": 5,
      "dependency_distance_cost": 1.6470588235294117,
      "depth": 1,
      "transitive_dependencies": 4,
      "dependent_lines": [
        4,
        3,
        15,
        3,
        1
      ]
    },
    {
      "line_number": 9,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.47058823529411764,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 10,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.5294117647058824,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 14,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.6470588235294118,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        3
      ]
    },
    {
      "line_number": 16,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.5294117647058824,
      "depth": 2,
      "transitive_dependencies": 3,
      "dependent_lines": [
        13,
        10
      ]
    }
  ],
  "overall_complexity_score": 23.08235294117647
}
